# eos-social

./: .gitignore  .project  .pydevproject  Makefile  Makefile.am  README.md  autogen.sh  build.sh  configure.ac  eos-social  eos-social.in  facebook_post.py  fb_auth_view.py  generate_po_file.sh  generate_pot_file.sh  social_bar.ini  social_bar_model.py  social_bar_presenter.py  social_bar_view.py
.tx/: config
EosSocial/: Makefile.am  __init__.py  config.js.in  eossocialutils.c  eossocialutils.h  frameClock.js  main.js  mainWindow.js  main_window.py  parseUri.js  path.js.in  socialBar.js  socialBarView.js  social_bar.py  social_bar_view.py  socketWatcher.js  wmInspect.js
data/: Makefile.am  com.endlessm.SocialBar.service.in  eos-social-autostart.desktop  eos-social.css  eos-social.gresource.xml  offline.css  offline.html
debian/: .gitignore  changelog  control  dirs  postinst  rules
etc/eos-social/: eos-social-service  social_bar.ini
offline/: offline.html
po/: LINGUAS  POTFILES.in  ar.po  bn.po  bn_IN.po  de.po  eos-social.pot  es.po  fil.po  fr.po  hi.po  id.po  mr.po  pt.po  pt_BR.po  ro.po  th.po  vi.po  zh_CN.po  zh_TW.po
src/: defaults.py  demo.xhtml  main_window.py  patcher.py  settings.py  social_bar.ini  social_bar.py  social_bar_model.py  social_bar_presenter.py  social_bar_view.py  wm_inspect.py
src/facebook/: facebook_post.py  facebook_post_fql.py  facebook_posts.py  facebook_posts_fql.py  fb_auth_view.py  fb_auth_window.py
src/templates/: comments-blank.html  news-feed-fql.html  news-feed.html  posts-array-fql.html  posts-array.html
src/ui/: __init__.py  animations.py  dialogs.py  main_window.py  simple_button.py  skinable_window.py  user_profile_menu.py  wm_inspect.py
src/util/: http_request_handler.py  util.py  webserver.py
test/social_bar_test/: test_social_bar_model.py  test_sotial_bar_presenter.py
test/ui/: _run.sh  run_main_window.py  run_main_window_add_something.py  run_main_window_dock_right.py
util/: http_request_handler.py
